--- a/templates/pdf/invoice.html
+++ b/templates/pdf/invoice.html
@@ -1,15 +1,135 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Invoice-{{ .Invoice.Reference }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 </head>
+
 <body>
-    <h1>Refernce: {{ .Invoice.Reference }}</h1>
-    <h1>Client: {{ .Invoice.Client.User.Name }}</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <div style="text-align: center;margin-bottom: 25px;">
+                    <img width="180" src="" alt="Logo">
+                    <h4 style="margin-bottom: 20px;">
+                        <span>Reference::</span> <strong>{{ .Invoice.Reference }}</strong>
+                    </h4>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row mb-4">
+                            <div class="col-xs-4 mb-3 mb-md-0">
+                                <h4 class="mb-2" style="border-bottom: 1px solid #dddddd;padding-bottom: 10px;">Company
+                                    Info:</h4>
+                                <div><strong>{{ .Setting.CompanyName }}</strong></div>
+                                <div>{{ .Setting.CompanyAddress }}</div>
+                                <div>Email: {{ .Setting.CompanyEmail }}</div>
+                            </div>
+
+                            <div class="col-xs-4 mb-3 mb-md-0">
+                                <h4 class="mb-2" style="border-bottom: 1px solid #dddddd;padding-bottom: 10px;">Customer
+                                    Info:</h4>
+                                <div><strong>{{ .Invoice.Client.User.Name }}</strong></div>
+                                <div>{{ .Invoice.Client.Address }}</div>
+                                <div>Email: {{ .Invoice.Client.User.Email }}</div>
+                            </div>
+
+                            <div class="col-xs-4 mb-3 mb-md-0">
+                                <h4 class="mb-2" style="border-bottom: 1px solid #dddddd;padding-bottom: 10px;">Invoice
+                                    Info:</h4>
+                                <div>Invoice: <strong>{{ .Invoice.Reference }}</strong></div>
+                                <div>Date: {{ .Invoice.IssueDate }}</div>
+                                <div>
+                                    Status: <strong>{{ .Invoice.Status }}</strong>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="table-responsive-sm" style="margin-top: 30px;">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th class="align-middle">Product</th>
+                                        <th class="align-middle">Unit Price</th>
+                                        <th class="align-middle">Quantity</th>
+                                        <th class="align-middle">Tax (%)</th>
+                                        <th class="align-middle">Sub Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {{ range .Invoice.InvoiceProducts }}
+                                    <tr>
+                                        <td class="align-middle">
+                                            {{ .ProductName }}
+                                        </td>
+
+                                        <td class="align-middle">{{ Price .UnitPrice }}</td>
+
+                                        <td class="align-middle">
+                                            {{ .Quantity }}
+                                        </td>
+
+                                        <td class="align-middle">
+                                            {{with .Tax}}
+                                                {{ .Percentage }}
+                                            {{else}}
+                                                N/A
+                                            {{end}}
+                                        </td>
+
+                                        <td class="align-middle">
+                                            {{ Price .SubTotal }}
+                                        </td>
+                                    </tr>
+                                    {{ end }}
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4 col-xs-offset-8">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td class="left"><strong>Discount Amount</strong></td>
+                                            <td class="right">{{ Price .Invoice.DiscountAmount }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="left"><strong>Tax Amount</strong></td>
+                                            <td class="right">{{ Price .Invoice.TaxAmount }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="left"><strong>Total Amount</strong></td>
+                                            <td class="right"><strong>{{ Price .Invoice.TotalAmount }}</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="left"><strong>Paid Amount</strong></td>
+                                            <td class="right"><strong>{{ Price .Invoice.PaidAmount }}</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="left"><strong>Due Amount</strong></td>
+                                            <td class="right"><strong>{{ Price .Invoice.DueAmount }}</strong></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 25px;">
+                            <div class="col-xs-12">
+                                <p style="font-style: italic;text-align: center">Auto Generated Invoice. {{ .Setting.CompanyName }} &copy; 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
